[package]
authors = ["Sebastian Messmer <messmer@cryfs.org>"]
edition = "2021"
name = "lockpool"
version = "3.0.1"
rust-version = "1.65.0"
readme = "README.md"
documentation = "https://docs.rs/lockpool"
homepage = "https://github.com/smessmer/lockpool"
repository = "https://github.com/smessmer/lockpool"
license = "MIT OR Apache-2.0"
keywords = ["concurrency", "thread", "locks", "mutex"]
categories = ["asynchronous", "concurrency"]
description = "This library offers a pool of locks where individual locks can be locked/unlocked by key"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owning_ref_lockable = "^0.4.2"
thiserror = "^1.0.37"
tokio = {version = "^1.22.0", optional = true, features = ["sync"]}
async-trait = {version = "^0.1.58", optional = true}
derive_more = "^0.99.17"

[dev-dependencies]
criterion = "^0.4.0"
crossbeam-utils = "^0.8.14"
tokio = {version = "^1.22.0", features = ["sync", "time", "macros", "rt-multi-thread"]}

[features]
tokio = ["dep:tokio", "dep:async-trait"]

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "fat"
